--- a/mediamtx.yml
+++ b/mediamtx.yml
@@ -50,8 +50,8 @@ webrtcAllowOrigin: "*"
 paths:
   camera1:
     source: rtsp://admin:Tatva%40321@183.82.113.87:554/Streaming/Channels/301
-    sourceOnDemand: yes
+    sourceOnDemand: no
 
   camera2:
     source: rtsp://admin:admin@192.168.1.4:1935
-    sourceOnDemand: yes
+    sourceOnDemand: no
