--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
-version: "3.9"
-
 services:
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
     ports:
-      - "9090:9090"
+      - "${PROMETHEUS_PORT:-9090}:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
@@ -18,6 +16,11 @@ services:
       - '--web.enable-lifecycle'
     networks:
       - monitoring
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
     depends_on:
       - mediamtx
     restart: unless-stopped
@@ -26,32 +29,42 @@ services:
     image: grafana/grafana:latest
     container_name: grafana
     ports:
-      - "3000:3000"
+      - "${GRAFANA_PORT:-3000}:3000"
     volumes:
       - grafana_data:/var/lib/grafana
       - ./grafana-provisioning/datasources:/etc/grafana/provisioning/datasources
       - ./grafana-provisioning/dashboards:/etc/grafana/provisioning/dashboards
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD:-admin}
     networks:
       - monitoring
     restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   mediamtx:
     image: bluenviron/mediamtx:latest
     container_name: mediamtx
     ports:
-      - "8554:8554"
-      - "1935:1935"
-      - "8887:8887"
-      - "8888:8888"
-      - "8889:8889"
-      - "9998:9998"
+      - "${RTSP_PORT:-8554}:8554"
+      - "${RTMP_PORT:-1935}:1935"
+      - "${API_PORT:-8887}:8887"
+      - "${HLS_PORT:-8888}:8888"
+      - "${WEBRTC_PORT:-8889}:8889"
+      - "${MEDIAMTX_METRICS_PORT:-9998}:9998"
     volumes:
       - ./mediamtx.yml:/mediamtx.yml
     networks:
       - monitoring
     restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "5"
 
   hls-keepalive:
     image: curlimages/curl:8.12.1
@@ -62,12 +75,17 @@ services:
     networks:
       - monitoring
     restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "5m"
+        max-file: "2"
 
   node-exporter:
     image: prom/node-exporter:latest
     container_name: node-exporter
     ports:
-      - "9100:9100"
+      - "${NODE_EXPORTER_PORT:-9100}:9100"
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
@@ -80,6 +98,11 @@ services:
     networks:
       - monitoring
     restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   mediamtx-exporter:
     build:
@@ -87,7 +110,7 @@ services:
       dockerfile: Dockerfile.mediamtx-exporter
     container_name: mediamtx-exporter
     ports:
-      - "8081:8080"
+      - "${EXPORTER_HOST_PORT:-8081}:8080"
     depends_on:
       - mediamtx
     healthcheck:
@@ -99,12 +122,17 @@ services:
     networks:
       - monitoring
     restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:latest
     container_name: cadvisor
     ports:
-      - "8080:8080"
+      - "${CADVISOR_PORT:-8080}:8080"
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:ro
@@ -116,6 +144,11 @@ services:
     networks:
       - monitoring
     restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 volumes:
   prometheus_data:
@@ -123,4 +156,5 @@ volumes:
 
 networks:
   monitoring:
+    name: ${MONITORING_NETWORK_NAME:-monitoring}
     driver: bridge
