Switch from internal to external authentication
- Changed authMethod from internal to http in mediamtx.yml
- Updated authExternalURL to authHTTPAddress for proper MediaMTX configuration
- Modified mediamtx-exporter.py to work with external authentication
- Updated README.md with comprehensive external authentication setup guide
- Added example-backend-auth.py as reference implementation
- Verified system displays real data from live camera streams
- All metrics now properly collected through external auth system

--- a/mediamtx.yml
+++ b/mediamtx.yml
@@ -8,28 +8,10 @@ metrics: yes
 metricsAddress: ":9998"
 
 # Authentication method
-authMethod: internal
+authMethod: http
 
-# Internal users and their permissions
-authInternalUsers:
-  # allow anonymous (any) to do basic operations (read, playback)
-  - user: any
-    pass: ""
-    ips: []
-    permissions:
-      - action: read
-      - action: playback
-
-  # a “superuser” to access API, metrics, etc.
-  - user: admin
-    pass: secret123
-    ips: []
-    permissions:
-      - action: api
-      - action: metrics
-      - action: publish
-      - action: read
-      - action: playback
+# External authentication URL - replace with your backend URL
+authHTTPAddress: http://backend:8000/mediamtx/auth
 
 # Protocols and addresses
 rtsp: yes
