--- a/grafana-provisioning/dashboards/dashboard.yml
+++ b/grafana-provisioning/dashboards/dashboard.yml
@@ -1,12 +1,13 @@
 apiVersion: 1
 
 providers:
-  - name: 'default'
+  - name: 'mediamtx-dashboards'
     orgId: 1
-    folder: ''
+    folder: 'MediaMTX'
     type: file
     disableDeletion: false
     updateIntervalSeconds: 10
     allowUiUpdates: true
     options:
       path: /etc/grafana/provisioning/dashboards
+      foldersFromFilesStructure: true
