--- a/prometheus.yml
+++ b/prometheus.yml
@@ -9,19 +9,16 @@ rule_files:
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['prometheus:9090']
     scrape_interval: 15s
     metrics_path: '/metrics'
 
-  # Direct MediaMTX metrics scraping (with authentication)
+  # Direct MediaMTX metrics scraping (external authentication)
   - job_name: 'mediamtx-direct'
     static_configs:
       - targets: ['mediamtx:9998']
     scrape_interval: 5s
     metrics_path: '/metrics'
-    basic_auth:
-      username: 'admin'
-      password: 'secret123'
     relabel_configs:
       - source_labels: [__address__]
         target_label: instance
@@ -47,13 +44,3 @@ scrape_configs:
       - source_labels: [__address__]
         target_label: instance
         replacement: 'mediamtx-custom'
-
-  - job_name: 'cadvisor'
-    static_configs:
-      - targets: ['cadvisor:8080']
-    scrape_interval: 15s
-    metrics_path: '/metrics'
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: instance
-        replacement: 'docker-containers'
